fix(ui): adding a root style for aligning text to the left as default (#100) WEBC-1721

--- a/packages/ui/src/components/banner/_banner.scss
+++ b/packages/ui/src/components/banner/_banner.scss
@@ -2,6 +2,7 @@
   max-width: 100%;
   height: 100%;
   transition: all .5s ease;
+  text-align: left;
 }
 
 .bannerWrapper {
